@@ -197,6 +197,7 @@ export(PositionJitterdodge)
 export(PositionNudge)
 export(PositionStack)
 export(Stat)
+export(StatBar)
 export(StatBin)
 export(StatBin2d)
 export(StatBindot)
@@ -429,6 +430,7 @@ export(scale_y_log10)
 export(scale_y_reverse)
 export(scale_y_sqrt)
 export(should_stop)
+export(stat_bar)
 export(stat_bin)
 export(stat_bin2d)
 export(stat_binhex)
